--- a/Crossword/Crossword/Crossword.csproj
+++ b/Crossword/Crossword/Crossword.csproj
@@ -66,7 +66,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests.cs" />
+    <Compile Include="DatabaseTests.cs" />
     <Compile Include="Word.cs" />
   </ItemGroup>
   <ItemGroup>
