--- a/Crossword/Crossword/Crossword.csproj
+++ b/Crossword/Crossword/Crossword.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CluesTests.cs" />
+    <Compile Include="PartialSolution.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DatabaseTests.cs" />
