Added Monday's Guardian as test case
No correct guesses, of course

--- a/Crossword/Crossword/Crossword.csproj
+++ b/Crossword/Crossword/Crossword.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\DatabaseTests.cs" />
     <Compile Include="Solver.cs" />
+    <Compile Include="Tests\GuardianTests.cs" />
     <Compile Include="Word.cs" />
   </ItemGroup>
   <ItemGroup>
