--- a/Crossword/Crossword/Crossword.csproj
+++ b/Crossword/Crossword/Crossword.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\CacheTests.cs" />
     <Compile Include="Tests\CluesTests.cs" />
     <Compile Include="PartialSolution.cs" />
     <Compile Include="Program.cs" />
